--- a/index.html
+++ b/index.html
@@ -1182,14 +1182,14 @@
 					<div class="col-lg-3 col-md-4 col-xs-12 mb-sm-30">
 						<h4 class="mb-30">CONTACT Us</h4>
 						<address>
-							<i class="ion-ios-location fa-icons"></i> 123 Main Street, St. NW Ste, 1 Washington, DC,USA.
+							<i class="ion-ios-location fa-icons"></i> Manet Junction Bus Stop, 86 Spintex Rd, Accra, Ghana
 						</address>
 						<ul class="link-small">
 							<li>
-								<a href="mailto:business@support.com"><i class="ion-ios-email fa-icons"></i>business@support.com</a>
+								<a href="mailto:business@support.com"><i class="ion-ios-email fa-icons"></i>info@foxcube.com.gh</a>
 							</li>
 							<li>
-								<a><i class="ion-ios-telephone fa-icons"></i>+56 (0) 012 345 6789</a>
+								<a><i class="ion-ios-telephone fa-icons"></i>(+233) 50 880 9255</a>
 							</li>
 						</ul>
 						<div class="icons-hover-black">
