--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 										<div>
 											<ul>
 												<li>
-													<a href="#" target="_blank" class="text-white"><i class="fa fa-facebook"></i></a>
+													<a href="https://www.facebook.com/profile.php?id=61555677674040" target="_blank" class="text-white"><i class="fa fa-facebook"></i></a>
 												</li>
 												<li>
 													<a href="#" target="_blank" class="text-white"><i class="fa fa-twitter"></i></a>
@@ -1193,7 +1193,7 @@
 							</li>
 						</ul>
 						<div class="icons-hover-black">
-							<a href="javascript:avoid(0);"> <i class="fa fa-facebook"></i> </a><a href="javascript:avoid(0);"> <i class="fa fa-twitter"></i> </a><a href="javascript:avoid(0);"> <i class="fa fa-youtube"></i> </a><a href="javascript:avoid(0);"> <i class="fa fa-dribbble"></i> </a><a href="javascript:avoid(0);"> <i class="fa fa-linkedin"></i> </a>
+							<a href="javascript:avoid(0);"> <i class="fa fa-facebook"></i> </a><a href="javascript:avoid(0);"> <i class="fa fa-twitter"></i> </a><a href="javascript:avoid(0);"> <i class="fa fa-youtube"></i> </a><a href="javascript:avoid(0);"> <i class="fa fa-dribbble"></i> </a><a href="https://www.linkedin.com/company/101548818/admin/feed/posts/"> <i class="fa fa-linkedin"></i> </a>
 						</div>
 					</div>
 					<div class="col-lg-2 col-md-3 col-xs-12 mb-sm-30">
