--- a/index.html
+++ b/index.html
@@ -326,9 +326,11 @@
 							<span class="b-line l-left"></span>
 						</div>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim aquis
-							nostrud exercitatio ullamco laboris nisi ut aliquip ex ea commodo consequat orem ipsum dolor sit ametconsectetur adipis cing elit sed do
-							eiusmod tempor incididunt
+							FOXCUBE is a leading provider of housing finishing inputs, and dedicated to enhancing living spaces with top-quality materials and innovative design solutions.
+
+With a passion for aesthetics, a commitment to quality and a focus on customer satisfaction, we have established ourselves as a trusted partner in the construction and finishing inputs industry.
+
+Explore our extensive range of housing finishing inputs and experience the difference that true quality and innovation can make
 						</p>
 						<div class="row mt-30">
 							<div class="col-lg-4 col-md-4 process mb-40">
