--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 									<p>
 										Solutions are tailor-made to your projects and different architecture requests
 									</p>
-									<a class="btn-text" href="about_us.html"> read more</a>
+									<a class="btn-text" href="about2.html"> read more</a>
 								</div>
 							</div>
 
