--- a/index.html
+++ b/index.html
@@ -971,8 +971,58 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 						<div class="testimonial_carosule-wrap">
 							<div class="single_carousel pt-40">
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod [..]
+									Working with Foxcube has been a game-changer for our construction projects. Their commitment to delivering top-quality building materials on time and within budget has significantly contributed to the success of our endeavors. We highly recommend their services
 								</p>
+								<div class="author_img__block">
+									<div class="author_tablecell__block">
+										<img src="assets/images/author.jpg" alt="">
+										<p>
+											Philip <span>Customer</span>
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="single_carousel pt-40">
+								<p>
+									Choosing Foxcube as our building supplier was one of the best decisions we made. Their extensive product range, competitive pricing, and exceptional customer service have made them our go-to partner for all our construction needs. They truly understand the importance of reliability in the building industry.
+								</p>
+								<div class="author_img__block">
+									<div class="author_tablecell__block">
+										<img src="assets/images/author.jpg" alt="">
+										<p>
+											Patrick <span> CEO of Open Construction GH</span>
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="single_carousel pt-40">
+								<p>
+									Reliability and consistency are the hallmarks of Foxcube. As a contractor, having a building supplier you can depend on is crucial. [Company Name] has consistently met our demands, providing us with top-notch materials and ensuring our projects progress seamlessly. We appreciate their dedication to excellence.
+								<div class="author_img__block">
+									<div class="author_tablecell__block">
+										<img src="assets/images/author.jpg" alt="">
+										<p>
+											Mina <span> Ghana Real Estate Manager</span>
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="single_carousel pt-40">
+								<p>
+									The team at Foxcube goes above and beyond to meet our building material requirements. Their customer-centric approach, coupled with a diverse inventory and prompt deliveries, has made them an indispensable partner in our construction ventures. We appreciate their professionalism and attention to detail.
+								</p>
+								<div class="author_img__block">
+									<div class="author_tablecell__block">
+										<img src="assets/images/author.jpg" alt="">
+										<p>
+											Benjamin Dadzie<span>Digital Marketer, SecurityShade</span>
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="single_carousel pt-40">
+								<p>
+									We've been sourcing building materials from Foxcube for years, and they have never disappointed. Their commitment to quality, combined with a responsive and knowledgeable team, sets them apart in the industry. We confidently recommend Foxcube to any construction professional looking for a reliable supplier.
 								<div class="author_img__block">
 									<div class="author_tablecell__block">
 										<img src="assets/images/author.jpg" alt="">
@@ -995,7 +1045,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									</div>
 								</div>
 							</div>
-							<div class="single_carousel pt-40">
+							<!-- <div class="single_carousel pt-40">
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod [..]
 								</p>
@@ -1007,59 +1057,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 										</p>
 									</div>
 								</div>
-							</div>
-							<div class="single_carousel pt-40">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod [..]
-								</p>
-								<div class="author_img__block">
-									<div class="author_tablecell__block">
-										<img src="assets/images/author.jpg" alt="">
-										<p>
-											John Doe <span>CEO</span>
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="single_carousel pt-40">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod [..]
-								</p>
-								<div class="author_img__block">
-									<div class="author_tablecell__block">
-										<img src="assets/images/author.jpg" alt="">
-										<p>
-											John Doe <span>CEO</span>
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="single_carousel pt-40">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod [..]
-								</p>
-								<div class="author_img__block">
-									<div class="author_tablecell__block">
-										<img src="assets/images/author.jpg" alt="">
-										<p>
-											John Doe <span>CEO</span>
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="single_carousel pt-40">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod [..]
-								</p>
-								<div class="author_img__block">
-									<div class="author_tablecell__block">
-										<img src="assets/images/author.jpg" alt="">
-										<p>
-											John Doe <span>CEO</span>
-										</p>
-									</div>
-								</div>
-							</div>
+							</div> -->
 
 						</div>
 					</div>
