--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿<!-- <!DOCTYPE html>
 <html lang="en">
 	
 <!-- contact17:44 GMT -->
@@ -408,4 +408,4 @@
 	</body>
 
 <!-- contact17:44 GMT -->
-</html>
+</html> -->
