--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="row">
 						<div class="col-md-3">
 							<div class="logo">
-								<a href="index-2.html"><img src="assets/images/logo.png" alt=""></a>
+								<a href="index.html"><img src="assets/images/logo.png" alt=""></a>
 							</div>
 							<!-- Phone Menu button -->
 							<button id="menu" class="menu hidden-md-up"></button>
@@ -65,13 +65,8 @@
 							<nav class="navigation">
 								<ul>
 									<li>
-										<a href="javascript:avoid(0);">Home</a><i class="ion-ios-plus-empty hidden-md-up"></i>
-										<ul class="sub-nav">
-											<li>
-												<a href="index-2.html">Home 1</a>
-											</li>
-
-										</ul>
+										<a href="index.html">Home</a><i class="ion-ios-plus-empty hidden-md-up"></i>
+										
 									</li>
 
 									<li>
@@ -422,9 +417,9 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									</div>
 								</div>
 								<div class="datail_show">
-									<h3>Reconstruction Services</h3>
+									<h3>ACOUSTIC CEILING</h3>
 									<p>
-										Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor...
+										<!-- Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor... -->
 									</p>
 									<a href="#!">Read More</a>
 								</div>
