--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									</div>
 								</div>
 								<div class="datail_show">
-									<h3>PLASTERBOARD & P.O.P CEILINGS</h3>
+									<h3>Plasterboard & P.O.P Ceiling</h3>
 									<p>
 										<!-- Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor... -->
 									</p>
@@ -407,7 +407,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-xs-30 margin_bott">
 						<div class="maine_box">
 							<div class="items_picher">
-								<img src="assets/images/service/img_2.jpg" alt="" />
+								<img src="assets/images/service/Acoustic.jpg" alt="" />
 							</div>
 
 							<div class="box_detail">
@@ -417,7 +417,8 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									</div>
 								</div>
 								<div class="datail_show">
-									<h3>ACOUSTIC CEILING</h3>
+									<h3>Acoustic Ceiling</h3>
+									
 									<p>
 										<!-- Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor... -->
 									</p>
@@ -431,7 +432,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-xs-30">
 						<div class="maine_box">
 							<div class="items_picher">
-								<img src="assets/images/service/img_3.jpg" alt="" />
+								<img src="assets/images/service/partition.jpg" alt="" />
 							</div>
 
 							<div class="box_detail">
@@ -441,7 +442,9 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									</div>
 								</div>
 								<div class="datail_show">
-									<h3>Building Information</h3>
+									<h3>Plasterboard Partitions</h3>
+
+									
 									<p>
 										Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor...
 									</p>
