--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 
 									
 									<p>
-										Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor...
+										<!-- Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor... -->
 									</p>
 									<a href="#!">Read More</a>
 								</div>
