--- a/index.html
+++ b/index.html
@@ -468,9 +468,10 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									</div>
 								</div>
 								<div class="datail_show">
-									<h3>Project Partnering</h3>
+									<h3>Interior Wall Moldings </h3>
+									 
 									<p>
-										Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor...
+										<!-- Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor... -->
 									</p>
 									<a href="#!">Read More</a>
 								</div>
