--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 					<div class="col-xl-3 col-lg-4 col-md-6 margin_top">
 						<div class="maine_box">
 							<div class="items_picher">
-								<img src="assets/images/service/img_5.jpg" alt="" />
+								<img src="assets/images/service/panel.jpg" alt="" />
 							</div>
 
 							<div class="box_detail">
@@ -493,9 +493,9 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									</div>
 								</div>
 								<div class="datail_show">
-									<h3>Roofing & Flooring</h3>
+									<h3>Interior Wall Panels</h3>
 									<p>
-										Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor...
+										<!-- Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor... -->
 									</p>
 									<a href="#!">Read More</a>
 								</div>
