--- a/index.html
+++ b/index.html
@@ -78,11 +78,9 @@
 											</li> -->
 
 											<li>
-												<a href="about2.html">About 2</a>
+												<a href="about.html">About </a>
 											</li>
-											<li>
-												<a href="about3.html">About 3</a>
-											</li>
+											
 											<li>
 												<a href="career.html">Career</a>
 											</li>
