--- a/about.html
+++ b/about.html
@@ -278,7 +278,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 												<h2>Meet our partners</h2>
 												<p>
 												At FoxCube Ltd, we take immense pride in the collaborative relationships that drive our success. Meet some of our esteemed partners who have played an integral role in shaping our journey
-												<a href="#" class="abt-block_link"> Read More <i class="fa fa-chevron-circle-right abt-block_link-arrow" aria-hidden="true"></i></a>
+												<a href="partnerships.html" class="abt-block_link"> Read More <i class="fa fa-chevron-circle-right abt-block_link-arrow" aria-hidden="true"></i></a>
 											</div>
 											<div class="abt-block__right abt-block__img1"></div>
 										</div><!--item 1-->
