--- a/services.html
+++ b/services.html
@@ -159,7 +159,7 @@
 											</li>
 
 											<li>
-												<a href="contact1.html">Contact 2</a>
+												<a href="contact.html">Contact 2</a>
 											</li>
 
 										</ul>
