--- a/contact.html
+++ b/contact.html
@@ -79,15 +79,10 @@
 										<ul class="sub-nav">
 
 											<li>
-												<a href="about.html">About 1</a>
+												<a href="about.html">About </a>
 											</li>
 
-											<li>
-												<a href="about2.html">About 2</a>
-											</li>
-											<li>
-												<a href="about3.html">About 3</a>
-											</li>
+											
 											<li>
 												<a href="career.html">Career</a>
 											</li>
@@ -144,15 +139,7 @@
 											<li>
 												<a href="faq.html">Faq</a>
 											</li>
-											<li>
-												<a href="register.html">Register</a>
-											</li>
-											<li>
-												<a href="login.html">login</a>
-											</li>
-											<li>
-												<a href="testimonial.html">Testimonials</a>
-											</li>
+											
 											<!-- <li>
 												<a href="404.html">404 Error</a>
 											</li>
