--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 								<div class="right-txt float-right">
 									<h3>Quick Help</h3>
 									<p>
-										Lorem Ipsum Dolor Sit Amet
+										<a href="tel:123-456-7890">050 880 9255</a>
 									</p>
 								</div>
 							</div>
@@ -326,10 +326,10 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									<i class="ion-ios-bolt-outline"></i>
 								</div>
 								<div class="right-txt float-right">
-									<h3>Country</h3>
+									<h3>Live Chat</h3>
 									<p>
-										Lorem Ipsum Dolor Sit Amet
-									</p>
+									
+										<a href="https://api.whatsapp.com/send?phone=0508809255&text=Hello, how can we be of help">Talk to us</a>
 								</div>
 							</div>
 
