--- a/about.html
+++ b/about.html
@@ -148,18 +148,9 @@
 										</ul>
 									</li>
 									<li>
-										<a href="javascript:avoid(0);">Contact Us</a><i class="ion-ios-plus-empty hidden-md-up"></i>
-										<ul class="sub-nav">
-
-											<li>
-												<a href="contact.html">Contact 1</a>
-											</li>
-
-											<li>
-												<a href="contact1.html">Contact 2</a>
-											</li>
-
-										</ul>
+										<a href="contact.html">Contact Us</a><i class="ion-ios-plus-empty hidden-md-up"></i>
+										
+											
 									</li>
 
 								</ul>
