--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 					<div class="col-xl-3 col-lg-4 col-md-6 margin_top">
 						<div class="maine_box">
 							<div class="items_picher">
-								<img src="assets/images/service/img_6.jpg" alt="" />
+								<img src="assets/images/service/image_profile.jpg" alt="" />
 							</div>
 
 							<div class="box_detail">
@@ -508,7 +508,8 @@ Explore our extensive range of housing finishing inputs and experience the diffe
 									</div>
 								</div>
 								<div class="datail_show">
-									<h3>Program Management</h3>
+									<h3>Metal Profiles </h3>
+									
 									<p>
 										Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor...
 									</p>
