--- a/faq.html
+++ b/faq.html
@@ -94,15 +94,8 @@
 										</ul>
 									</li>
 									<li>
-										<a href="javascript:avoid(0);">services</a><i class="ion-ios-plus-empty hidden-md-up"></i>
-										<ul class="sub-nav">
-											<li>
-												<a href="services.html">services All</a>
-											</li>
-											<li>
-												<a href="services-details.html">service Details</a>
-											</li>
-										</ul>
+										<a href="services.html">services</a><i class="ion-ios-plus-empty hidden-md-up"></i>
+										
 									</li>
 									<li>
 										<a href="javascript:avoid(0);">Project</a><i class="ion-ios-plus-empty hidden-md-up"></i>
