--- a/services.html
+++ b/services.html
@@ -96,15 +96,8 @@
 										</ul>
 									</li>
 									<li>
-										<a href="javascript:avoid(0);">services</a><i class="ion-ios-plus-empty hidden-md-up"></i>
-										<ul class="sub-nav">
-											<li>
-												<a href="services.html">services All</a>
-											</li>
-											<li>
-												<a href="services-details.html">service Details</a>
-											</li>
-										</ul>
+										<a href="services.html">services</a><i class="ion-ios-plus-empty hidden-md-up"></i>
+										
 									</li>
 									<li>
 										<a href="javascript:avoid(0);">Project</a><i class="ion-ios-plus-empty hidden-md-up"></i>
@@ -307,7 +300,7 @@
 			<div class="col-xl-3 col-lg-4 col-md-6 margin_top">
 				<div class="maine_box">
 					<div class="items_picher">
-						<img src="assets/images/service/img_6.jpg" alt="" />
+						<img src="assets/images/service/image_profile.jpg" alt="" />
 					</div>
 
 					<div class="box_detail">
@@ -317,7 +310,8 @@
 							</div>
 						</div>
 						<div class="datail_show">
-							<h3>Program Management</h3>
+							<h3>Metal Profiles </h3>
+							
 							<p>
 								Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor...
 							</p>
@@ -379,6 +373,7 @@
 		</div>
 	</div>
 </section>
+<!-- OUR_Service END-->
 <!-- OUR_Service END-->
 		<!-- FOOTER -->
 		<footer class="footer pt-80 pt-xs-60">
